_sass/sscummings/templates/_archive-art.scss
.archive-art {

	.image-title a {
		color: $text-color;
	}

	.art-section {

		&:not(:last-child) {
			margin-bottom: $grid-gutter-width*2;
		}

		.art-preview {
			width: 100%;
			display: flex;
			justify-content: center;
		}

		@include mq-down($md-down) {
			.art-preview {
				min-height: 100vh;
				display: flex;
				align-items: center;

				.image {
					img {
						max-height: calc(#{$img-max-height} - 50px - #{$grid-gutter-width}/2);
						width: auto;
						margin-left: auto;
						margin-right: auto;
					}
				}
			}
			&:first-child {
				.art-preview {
					margin-top: calc(-1*(#{$header-height} + #{$grid-gutter-width}));
					.art-preview {
						padding-top: $header-height;
					}
				}
			}
		}

		@include mq-down($sm-down) {
			.art-preview {
				.image {
					img {
						max-height: calc(#{$img-max-height} - 40px);
						width: auto;
					}
				}
			}
		}

		@include mq-down($xs-down) {
			.art-preview {
				.image {
					img {
						max-height: calc(#{$img-max-height} - 30px);
						width: auto;
					}
				}
			}
		}

		@include mq-up($lg-up) {
			display: flex;
			align-items: center;
			min-height: 100vh;

			&:first-child {
				margin-top: calc(-1*(#{$header-height} + #{$grid-gutter-width}));
				.art-preview {
					padding-top: $header-height;
				}
			}

			.art-preview {
				order: 2;
				padding-left: 80px; // allow space for .next-prev
			}
		}
	}
}

